# hikvision-cli-tool

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: hv_client.rs  main.rs  types.rs
