[package]
name = "hikvision-sadp-client"
version = "0.1.0"
authors = ["cub3d"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde-xml-rs = "0.4.1"
uuid = { version = "0.8.2", features = ["v4"] }
md5 = "0.7.0"
base64 = "0.13.0"
clap = "2.33.3"
cli-table = "0.3"
rsa = "0.3.0"
rsa-der = "0.2.1"
rand = "0.7.3"
