[package]
name = "hikvision-sadp-client"
version = "0.1.0"
authors = ["cub3d"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde-xml-rs = "0.5.1"
uuid = { version = "0.8.2", features = ["v4"] }
md5 = "0.7.0"
base64 = "0.13.0"
clap = "3.1.14"
cli-table = { version = "0.4", default-features = false }
